<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.ninele7.tracker.ui.edit.habit.EditHabitViewModel"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.edit.habit.EditHabitFragment"
                android:orientation="vertical"
                android:layout_margin="4dp">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/habit_name_placeholder"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={viewModel.name}"
                    android:maxLength="18"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/habit_description_placeholder"
                    android:ems="10"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:maxLength="36"
                    android:text="@={viewModel.description}"/>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/habit_priority">
                <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/priority_spinner"
                        android:layout_weight="1"
                        android:inputType="none"
                        tools:ignore="LabelFor"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                    android:id="@+id/type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/habit_type_label"/>
                <RadioButton
                        android:text="@string/good_habit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioGood"/>
                <RadioButton
                        android:text="@string/bad_habit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioBad"/>
            </RadioGroup>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/habit_time_period_placeholder"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@={viewModel.period}"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/habit_amount_of_times_placeholder"
                    android:importantForAutofill="no"
                    android:text="@={viewModel.timesPerPeriod}"/>
            <HorizontalScrollView android:layout_width="match_parent"
                                  android:layout_height="120dp">
                <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                    <com.ninele7.tracker.ui.util.GradientView android:layout_width="1600dp"
                                                              android:layout_height="120dp"/>
                    <androidx.recyclerview.widget.RecyclerView android:layout_width="1600dp"
                                                               android:layout_height="120dp"
                                                               app:layoutManager="LinearLayoutManager"
                                                               android:orientation="horizontal"
                                                               android:id="@+id/colorPicker"/>
                </androidx.coordinatorlayout.widget.CoordinatorLayout>
            </HorizontalScrollView>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="4dp">
                <View android:layout_width="80dp" android:layout_height="80dp"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintBottom_toBottomOf="parent"
                      android:id="@+id/colorPreview"
                      android:background="@{viewModel.observer.color}"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          app:layout_constraintStart_toEndOf="@+id/colorPreview"
                          app:layout_constraintTop_toTopOf="parent"
                          android:id="@+id/colorHSV"
                          android:text="@{viewModel.observer.HSVColor}"
                          android:layout_marginStart="4dp"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          app:layout_constraintStart_toEndOf="@+id/colorPreview"
                          app:layout_constraintTop_toTopOf="@+id/colorHSV"
                          android:text="@{viewModel.observer.RGBColor}"
                          android:layout_marginTop="16dp"
                          android:layout_marginStart="4dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                    android:text="@string/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/button"
                    android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
</layout>

